--- a/docs/draft/evaluation.tex
+++ b/docs/draft/evaluation.tex
@@ -30,21 +30,21 @@ The devices included an HTC EVO 3D and a Motorola Droid RAZR both running Androi
 \subsection{Performance}
 \begin{figure*}[h]
 	\begin{center}
-		\includegraphics[scale=0.5]{figs/battery_level.png}
+		\includegraphics[scale=0.5]{figs/BatteryLevelLong.png}
 		\caption{Battery Level Over Time, Dataset 1}
 		\label{fig:bat_level}
 \end{center}
 \end{figure*}
 \begin{figure*}[h]
 	\begin{center}
-		\includegraphics[scale=0.5]{figs/est_time_remaining.png}
+		\includegraphics[scale=0.5]{figs/EstimatedTimeRemainingLong.png}
 		\caption{Estimated Time Remaining Over Time, Dataset 1}
 		\label{fig:est_remaining}
 \end{center}
 \end{figure*}
 \begin{figure*}[h]
 	\begin{center}
-		\includegraphics[scale=0.5]{figs/bat_vs_time_short.png}
+		\includegraphics[scale=0.5]{figs/BatteryLevelShort.png}
 		\caption{Battery Level Over Time, Dataset 2}
 		\label{fig:bat_vs_time_short}
 \end{center}
