--- a/docs/draft/future.tex
+++ b/docs/draft/future.tex
@@ -2,7 +2,7 @@
 \label{sec:future}
 \subsection{Power Model}
 \emph{Watt's Happening} currently reports applications' use of hardware resources without linking resource usage directly to power draw.
-A power model that correlates a specific resource's use to battery draw would allow applications to be directly linked to battery depletion.
+A power model that correlates a specific resource's use to battery draw would allow battery depletion to directly link to the responsible application.
 %This would enable 
 
 \subsection{User Model}
@@ -14,6 +14,6 @@ A well-designed user model could account for usage habits and incorporate this i
 Currently, \emph{Watt's Happening} provides lists of applications weighted by specific resource consumption.
 A more robust recommendation engine could provide a single list of recommended actions, incorporating the user model, the power model, and past recommendations taken.
 Past recommendations accepted would indicate the user's flexibility and priorities for the device.
-If the user is not willing to terminate a particular program, recommending this action does not ultimately aide the user, even if the application is very resource and battery intensive.
+If the user does not want to terminate a particular program, recommending this action does not ultimately aide the user, even with a very resource and battery intensive application.
 
 
