--- a/docs/draft/evaluation.tex
+++ b/docs/draft/evaluation.tex
@@ -67,9 +67,9 @@ In our test runs, \emph{Watt's Happening} routinely uses a negligible amount of 
 Therefore, we conclude that the resource consumption of \emph{Watt's Happening} is acceptable.
 Although we, the developers of \emph{Watt's Happening}, have taken great strides toward conservative yet accurate battery life estimates, runs with long idle times may still have some amount of overestimation.
 %
-When taken in context to the life of the universe, for example, over estimation by hours is a very small thing. 
-Humans don't live that long, anyway.
-Timey-Wimey   %that got away from you there
+%When taken in context to the life of the universe, for example, over estimation by hours is a very small thing. 
+%Humans don't live that long, anyway.
+%Timey-Wimey   %that got away from you there
 %
 This is due to the averaging of historic data.  
 Potential solutions include removing long periods of idle time from the averaged data or using exponential weighted moving averages to deemphasize periods of low use the further these periods are from the present.
