working on abstract

--- a/docs/draft/main.tex
+++ b/docs/draft/main.tex
@@ -12,6 +12,22 @@
 
 %TODO abstract
 % abstract should include something about "created Watt's Happening"
+\begin{abstract}
+% motivation
+% The 
+% Ubiquitous mobile devices 
+%    widening gap between device computing power and battery technology
+Unfortunately, short battery life severely limits the full potential of mobile devices.
+%Widespread use of mobile devices has 
+%Mobile devices are prominent, but battery technology is lagging behind.
+%Batteries constrain device use more than other hardware, as power draw increases.
+% design 
+
+These issues inspired our creation of \emph{Watt's Happening}, an Android application that aids users in maximizing their device's battery life.
+% evaluation results
+% conclusion
+
+\end{abstract}
 \input{intro}
 \input{motivation}
 \input{design}
