--- a/docs/draft/main.tex
+++ b/docs/draft/main.tex
@@ -15,9 +15,10 @@
 \begin{abstract}
 % motivation
 % The 
-% Ubiquitous mobile devices 
-%    widening gap between device computing power and battery technology
-Unfortunately, short battery life severely limits the full potential of mobile devices.
+% Ubiquitous mobile devices
+The rapid growth in mobile computing power has provided mobile devices with increased capabilities. 
+Unfortunately, the widening gap between power consumption and battery technologies
+results in shorter battery life, which severely limits the full potential of mobile devices.
 %Widespread use of mobile devices has 
 %Mobile devices are prominent, but battery technology is lagging behind.
 %Batteries constrain device use more than other hardware, as power draw increases.
