--- a/docs/draft/main.tex
+++ b/docs/draft/main.tex
@@ -10,12 +10,7 @@
 \begin{document}
 \maketitle
 
-%TODO abstract
-% abstract should include something about "created Watt's Happening"
 \begin{abstract}
-% motivation
-% The 
-% Ubiquitous mobile devices
 The rapid growth in mobile computing power has provided mobile devices with increased capabilities. 
 Unfortunately, the widening gap between power consumption and battery technologies
 results in shorter battery life, which severely limits the full potential of mobile devices.
@@ -23,9 +18,11 @@ results in shorter battery life, which severely limits the full potential of mob
 %Mobile devices are prominent, but battery technology is lagging behind.
 %Batteries constrain device use more than other hardware, as power draw increases.
 % design 
-
 These issues inspired our creation of \emph{Watt's Happening}, an Android application that aids users in maximizing their device's battery life.
 % evaluation results
+We provide the user with a tool to prolong their device's battery life by displaying high-use applications that the user can terminate to the benefit of battery longevity.
+% conducted a variety of real-world tests, and 
+We conducted a variety of real-world tests, and determined the application offers appropriate recommendations.
 % conclusion
 
 \end{abstract}
