--- a/docs/draft/intro.tex
+++ b/docs/draft/intro.tex
@@ -6,5 +6,5 @@ With the rapid increase in the prevalence of mobile device technology into every
 This can be difficult to achieve, as it's not always immediately apparent where energy is spent in your device.
 %This can be tricky to balance since it's not always immediately apparent where the energy is getting spent in your device.
 \emph{Watt's Happening} tracks the hardware state, battery level changes, and application resource usage. 
-Our application uses the data to compile resource usage metrics, providing information to the user on how much longer their device will last at their current rate.
+Our application uses the data to compile resource usage metrics, providing  to the user  how much longer their device will last at their current rate.
 By providing the user with this aggregated information in an easy to comprehend manner, users are able to make more informed decisions about how best to maximize their battery life.
