--- a/docs/draft/motivation.tex
+++ b/docs/draft/motivation.tex
@@ -4,15 +4,13 @@ Mobile devices, including smart phones and tablets, are nearly ubiquitous, and f
 These devices are capable of performing an ever-increasing array of tasks. 
 Unfortunately, short battery life severely limits the full potential of mobile devices. 
 As battery technology lags behind growing demands, devices need to intelligently use power resources. 
-Unfortunately, many application developers do not take into account these power limitations, or even realize the power draws of their applications on disparate devices. 
+Many application developers do not take into account these power limitations, or even realize the power draws of their applications on disparate devices. 
 A user may experience erratic power surges based on different applications and might not know if his or her device will last until the next opportunity to recharge. 
 
 While power analyzing applications exist, many are intended to aid application developers rather than end users \cite{Pathak:2012:ESI:2168836.2168841} \cite{energy-aware}. 
 %the below sentence is awkward but I've been unable to come up with something better. -af
-Of the power saving applications available for users, some complain of the applications being too intrusive or that they target specific mobile devices. 
+Of the power saving applications available for users, some complain of the applications being too intrusive or that they target specific mobile devices while ignoring other platforms. 
 These applications disable important features of the phone without user knowledge and make practical use of the device very difficult.
 \emph{Watt's Happening} provides useful information to users regardless of their underlying device hardware.
-% the below 'looks to' is awkward. aspires?  or just 'provides'
-%Also, \emph{Watt's Happening} looks to provide useful information to users regardless of their underlying device hardware.
 Compounding these problems, common users remain blissfully unaware of their power use until their phone reaches a minimum battery threshold.
 This need for an application to inform the user of high usage applications motivated the development of \emph{Watt's Happening}.
