--- a/docs/draft/evaluation.tex
+++ b/docs/draft/evaluation.tex
@@ -56,10 +56,11 @@ This figure shows \emph{Watt's Happening}'s estimate of remaining battery time, 
 As we can see, over long idle periods our estimation tends to increase.
 Conversely, over periods of heavy use, our estimation dramatically decreases in correlation with recent high usage.
 
-Figure \ref{fig:bat_vs_time_short} shows the battery depletion over a 35 minute run.
-The battery level drops from 40\% to 25\% over only 10 minutes, corresponding to our tester's use of a CPU-intensive game (in this case, \emph{Great Little War Game}\cite{glwg}).
-At the end of this use session, \emph{Watt's Happening} estimated approximately 20 minutes of battery life remained if application use continues.
-The test user continued the activity until battery depletion, demonstrating the accuracy of the estimate.
+Figure \ref{fig:bat_vs_time_short} shows the battery depletion over a 40 minute run.
+The battery level drops from 42\% to 0\%, corresponding to our tester's use of a CPU-intensive game (in this case, \emph{Great Little War Game}\cite{glwg}).
+After 20 minutes of game play, the tester ran \emph{Watt's Happening}'s analysis, which estimated 19.9 minutes remaining.
+%At the end of this use session, \emph{Watt's Happening} estimated approximately 20 minutes of battery life remained if application use continues.
+The test user continued the activity another 20 minutes until battery depletion, demonstrating the accuracy of the estimate.
 
 Since the goal of \emph{Watt's Happening} is to monitor application resource usage, we can use  \emph{Watt's Happening} to monitor itself.
 In our test runs, \emph{Watt's Happening} routinely uses a negligible amount of CPU resources, in relation to other running applications.
